vbnc/vbnc/tests/Errors/30530-4.vb
MustInherit Class ArgumentTypeInference
    Sub a(ByVal a As Integer)

    End Sub
    WriteOnly Property c(ByVal c As Integer) As Boolean
        Set(ByVal value As Boolean)

        End Set
    End Property
End Class